--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "animate.css": "^4.1.1",
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.1",
+    "csv-parse": "^4.16.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
